# OpendTect-python-plugin

./: .gitignore  CMakeLists.txt  README.md
plugins/PythonInstance/: CMakeLists.txt  main.cpp  odpython.cpp  odpython.h  odpythoninstance.cpp  odpythoninstance.h  odpythonio.cpp  wrapper_survinfo.h
plugins/PythonInstance/odpythoninstance/: odpythoninstance.cpp  odpythoninstance.h  odpythonio.h
plugins/PythonInstance/wrapper/: odpywrapper.cpp  odpywrapper.h  wrapper.h  wrapper_emhorizon3d.cpp  wrapper_emhorizon3d.h  wrapper_emmanager.cpp  wrapper_emmanager.h  wrapper_emobject.cpp  wrapper_emobject.h  wrapper_emsurface.cpp  wrapper_emsurface.h  wrapper_multiid.cpp  wrapper_multiid.h  wrapper_objectid.cpp  wrapper_objectid.h  wrapper_surfaceiodata.cpp  wrapper_surfaceiodata.h  wrapper_survinfo.cpp
plugins/UiPythonInstance/: CMakeLists.txt  main.cpp  uiodpython.cpp  uiodpython.h
